загрузка более 100 карточек